compiler/src/test/resources/golden/errors/loop_jump_outside_loop.dawn
fn f() -> Int = {
  break
  1
}

fn g() -> Int = {
  continue
  2
}

pub fn main() -> Unit !io = println("x")
