compiler/src/test/resources/golden/errors/loop_jump_outside_loop.err
error: `break` can only be used inside a loop body
  --> loop_jump_outside_loop.dawn:2:3
  |
2 |   break
  |   ^^^^^
error: `continue` can only be used inside a loop body
  --> loop_jump_outside_loop.dawn:7:3
  |
7 |   continue
  |   ^^^^^^^^
